# ugrend.com

./: migration.py  package-lock.json  package.json
backend/: .env.example  .gitignore  fflogs_config.json  llms.txt  main.py  pyproject.toml  settings.py  test_fflogs_rankings.py
backend/lib/: dependencies.py  fflogs_config.py
backend/models/: fflogs.py  screenshots.py
backend/tests/: verify_fflogs_config.py
backend/views/: base.py  fflogs.py  screenshots.py
frontend/: errors.txt  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Dashboard.tsx  Footer.tsx  Layout.tsx  RankingTable.tsx  RegionFilter.tsx  ZoneSelector.tsx
frontend/src/pages/: Screenshots.tsx
prisma/: schema.prisma
public/imgs/: test.html
src/: types.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/pats/: page.module.css  page.tsx
src/app/screenshots/: page.module.css  page.tsx
src/components/: AboutMe.module.css  AboutMe.tsx  Button.module.css  Button.tsx  FFLogsLink.module.css  FFLogsLink.tsx  Home.module.css  Home.tsx  MainContent.module.css  MainContent.tsx  NavBar.module.css  NavBar.tsx  PlayerLocation.tsx
src/components/Discord/: Discord.module.css  Discord.tsx
src/components/FFLogs/: BossIcon.tsx  ColorParse.tsx  FFLogs.module.css  FFLogs.tsx  FFLogsTable.module.css  FFLogsTable.tsx  FFLogsTableParseData.tsx  FFlogToggleButtons.tsx  JobIcon.module.css  JobIcon.tsx
src/components/Pats/: Pats.tsx  (+3 more)
src/lib/: FFLogs.ts  FFPlayerLookup.ts  NotifcationHandler.ts  PlayerTracker.ts  pats.ts  utils.ts
(+8 files in other folders)
